--- a/EmployeePayrollService/EmployeePayrollService.csproj
+++ b/EmployeePayrollService/EmployeePayrollService.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBFunctionsOperation.cs" />
     <Compile Include="EmployeeModel.cs" />
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="Program.cs" />
